--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,300&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,300&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:ital,wght@0,500;0,600;1,300&family=Roboto&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -62,10 +68,10 @@
   font-family: Belgrano;
   src: url('../assets/Belgrano-Regular.ttf');
 }
-@font-face {
+/* @font-face {
   font-family: Poppins;
   src: url('../assets/Poppins-Regular.ttf');
-}
+} */
 @font-face {
   font-family: Poppins-Extrabold;
   src: url('../assets/Poppins-ExtraBold.ttf');
