--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,3 +122,17 @@ html, body {
   position: relative;
   @apply border-gray-600 border-b-2
 }
+
+.SideBarTabsTrigger {
+  @apply text-gray-600 transition-colors duration-300 transform rounded-lg
+}
+.SideBarTabsTrigger:hover {
+  @apply dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-gray-700
+}
+.SideBarTabsTrigger[data-state='active'] {
+  @apply dark:text-gray-200 bg-gray-100 dark:bg-gray-800 text-gray-700
+}
+.SideBarTabsTrigger:focus {
+  position: relative;
+  @apply dark:text-gray-200 hover:bg-gray-100 dark:bg-gray-800 text-gray-700
+}
